# skku-voyager

./: docker-compose.yml
skku-voyager-backend/: Dockerfile  pyproject.toml  requirements.txt
skku-voyager-backend/config/: settings.py  urls.py
skku-voyager-backend/countries/: admin.py  models.py  serializers.py  urls.py  views.py
skku-voyager-backend/countries/migrations/: 0001_initial.py  0002_spot_country_avg_flight_price_country_description_and_more.py  0003_alter_country_avg_flight_price_and_more.py  0004_alter_country_avg_flight_price_and_more.py  0005_alter_country_language.py  0006_spot_image.py  0007_alter_country_language.py
skku-voyager-backend/medias/: admin.py  models.py  serializers.py  urls.py  views.py
skku-voyager-backend/medias/migrations/: 0001_initial.py  0002_photo_file.py
skku-voyager-backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
skku-voyager-backend/users/migrations/: 0001_initial.py
skku-voyager-frontend/: Dockerfile  package-lock.json  package.json
skku-voyager-frontend/src/: index.tsx  react-app-env.d.ts  router.tsx  theme.ts  types.d.ts
skku-voyager-frontend/src/components/: Country.tsx  Header.tsx  LoginModal.tsx  MainIntroduce.tsx  Root.tsx  SignUpModal.tsx  SocialLogin.tsx  SpotDetail.tsx
skku-voyager-frontend/src/css/: App.css
skku-voyager-frontend/src/routes/: CountryDetail.tsx  Home.tsx  NotFound.tsx
